# paddle_build

./: .gitignore  .vimrc  Dockerfile  Dockerfile.cuda92_cudnn7  Makefile  README.md  build.sh  build_android.sh  build_android_docker.sh  build_doc.sh  build_docker.sh  build_ios.sh  build_lite.sh  build_mac.sh  build_rpi.sh  clear.sh  common.sh  docker.sh  enable_core.sh  enter_docker.sh  env.sh  image.sh  run_docker.sh  run_lite.sh  run_models.sh  run_op_tester.sh  run_test.sh  run_unit_test.sh
notebook/: ConvTranspose1d.ipynb  Untitled.ipynb  WarmupLR.ipynb  espnet_paddle_transformer.ipynb  jit_combine.ipynb  logsoftmax_idempotent.ipynb  paddle_util.py  position_embed.ipynb  torch_model_to_paddle_model.ipynb  torch_util.py  u2_confermer_model_wenet.ipynb  wenet_model.ipynb
scripts/: build_cpu.sh  build_cpu_py.sh  build_cpu_py_blas.sh  build_gpu_py.sh  build_gpu_py_test.sh  build_gpu_py_test_mkl.sh  build_gpu_py_test_simple.sh  compile_gpu.sh
test/: test_ctc.py  test_ctc_cpu.py
test/ast/: ast.ipynb
test/ctc/: test_ctc_gpu.py  test_espnet.py  test_espnet_gpu.py  test_espnet_torch.py
test/cuda/elementwise/: elementwise_unary_operation.cu  log.cu
test/cuda/matrix_multiple/: README.md  mm_optimization.cu
test/cuda/matrix_multiple/column_major/: README.md  cublas_mm.cu  naive_mm.cpp
test/cuda/reduce/: README.md  reduce_sum_all.cu  reduce_sum_last_dim.cu  reduce_sum_leading_dim.cu
test/cuda/transpose/: README.md  transpose.cu
test/cuda/vecio/: README.md  elementwise_unary_operation.cu
test/how-to-optimize-gemm/src/HowToOptimizeGemm/: .gitignore  MMult2.c  MMult_1x4_3.c  MMult_1x4_4.c  MMult_1x4_5.c  MMult_1x4_6.c  MMult_1x4_7.c  MMult_1x4_8.c  MMult_1x4_9.c  MMult_4x4_10.c  MMult_4x4_11.c  MMult_4x4_12.c  MMult_4x4_13.c  MMult_4x4_14.c  MMult_4x4_15.c  MMult_4x4_3.c  MMult_4x4_4.c  MMult_4x4_5.c  MMult_4x4_6.c  MMult_4x4_7.c  MMult_4x4_8.c  MMult_4x4_9.c  makefile  output_MMult0.m  output_MMult1.m  output_MMult2.m  output_MMult_1x4_3.m  output_MMult_1x4_4.m  output_MMult_1x4_5.m  output_MMult_1x4_6.m  output_MMult_1x4_7.m  output_MMult_1x4_8.m  output_MMult_1x4_9.m  output_MMult_4x4_10.m  output_MMult_4x4_11.m  output_MMult_4x4_12.m  output_MMult_4x4_13.m  output_MMult_4x4_14.m  output_MMult_4x4_3.m  output_MMult_4x4_4.m  (+6 more)
test/jit/: jit_combine_params_2_test.py  jit_combine_params_test.py
test/paddle/: test_floor_divide.py
test/phi/: CMakeLists.txt  main.cc
test/u2/: .gitignore  CMakeLists.txt  README.md  decoder_main.cc  main.cc  main_test.cc  run.sh  run_all.sh  run_chunkall.sh  run_test.sh  run_wav.sh  run_wav_nocmvn.sh  sysconfig.py  sysconfig.py.bak  u2_jit_test.py
test/u2/cmake/: openfst.cmake
test/u2/core/: asr_itf.cc  pd_asr_model.cc  pd_asr_model.h
test/u2/data/: wav.20.scp  wav.aishell.test.scp  wav.scp
test/u2/decoder/: CMakeLists.txt  asr_decoder.cc  asr_decoder.h  asr_itf.cc  asr_itf.h  ctc_endpoint.cc  ctc_endpoint.h  ctc_prefix_beam_search.cc  ctc_prefix_beam_search.h  params.h  pd_asr_model.cc  pd_asr_model.h  search_itf.h
test/u2/frontend/: CMakeLists.txt  cmvn.cc  cmvn.h  fbank.h  feature_pipeline.cc  feature_pipeline.h  fft.cc  fft.h  wav.h
test/u2/local/: compute-wer.py  download.sh  jit_test.py  netron.sh  pperf.sh  run.sh  run_all.sh  run_quant.sh  run_test.sh  run_wav.sh  run_wav_nocmvn.sh  test.py  u2_jit_test.py
test/u2/patch/: README.md
test/u2/patch/openfst/src/extensions/special/: CMakeLists.txt
test/u2/patch/openfst/src/include/fst/: flags.h  log.h
test/u2/patch/openfst/src/lib/: flags.cc
test/u2/test/: CMakeLists.txt  ctc_prefix_beam_search_test.cc  feature_pipeline_test.cc  utils_test.cc
test/u2/utils/: CMakeLists.txt  block_queue.h  flags.h  log.h  logging.h  string.cc  string.h  thread_pool.h  timer.h  utils.cc  utils.h
test/u2/wenet/: README.md  decode.sh  run.sh  run_all.sh
tools/: sb_to_pd_wav2vec2.py  torch_to_paddle.py
